# WARDEN-JDC

./: .gitattributes  .gitignore  ERRORS  PROMPT  rejoin_model.ps1
WARDEN/: AUDIT_REPORT.md  README.md  SB  UD  UDSB
WARDEN/.planning/: PHASE5_PLAN.md  PROJECT.md  STATE.md
WARDEN/.planning/codebase/: STACK.md
WARDEN/Backend/JD-Coders---Rapid-Crisis-Response/: README.md
WARDEN/Backend/JD-Coders---Rapid-Crisis-Response/server/: .env  .env.example  .gcloudignore  Dockerfile  (+6 more)
WARDEN/Documents/: AppFlow.md  Design.md  Implementation.md  PRD.md  Rules.md  Schema.md  TRD.md
WARDEN/Responder Desktop App/: index.html  package-lock.json  package.json
WARDEN/Responder Desktop App/src/: App.css  App.jsx  api.js  config.js  index.css  utils.js
WARDEN/Responder Desktop App/src-tauri/: Cargo.toml  tauri.conf.json
WARDEN/Responder Desktop App/src-tauri/binaries/: gemma-4-e2b.gguf.part1  gemma-4-e2b.gguf.part3
WARDEN/Responder Desktop App/src-tauri/src/: main.rs
WARDEN/Simulation/: .gcloudignore  Dockerfile  package-lock.json  package.json  turbo.json
WARDEN/Staff Desktop App/app/: package-lock.json  package.json
WARDEN/Warden Android App/: build.gradle.kts  local.properties  settings.gradle.kts
WARDEN/Warden Android App/app/: build.gradle.kts
WARDEN/Website/: .gcloudignore  firebase.json  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json
WARDEN/Website/.firebase/: hosting.ZGlzdA.cache
WARDEN/Website/src/: App.tsx  index.css
WARDEN/k8s/: backend-deployment.yaml  simulation-deployment.yaml
WARDEN/schemas/: alert.schema.json
(+406 files in other folders)
